--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3>Welcome To Tic-Tac Toe</h3>
             <input type="text" placeholder="Player One" name="p1" id="p1">
             <input type="text" placeholder="Player One" name="p2" id="p2">
-            <button id="start">Start</button>
+            <button id="start-btn">Start</button>
         </div>
         <div class="start" id="end">
             <h1 id="result">Draw</h1>
