--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="start" id="start">
             <h3>Welcome To Tic-Tac Toe</h3>
             <input type="text" placeholder="Player One" name="p1" id="p1">
-            <input type="text" placeholder="Player One" name="p2" id="p2">
+            <input type="text" placeholder="Player Two" name="p2" id="p2">
             <button id="start-btn">Start</button>
         </div>
         <div class="start" id="end">
